--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,11 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+  #mainContents {
+    width: 100%;
+    font-size: 10px;
+    line-height: 1.6;
+  }
 }
 
 body {
